# monterey-bay-ai-lab

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  Dockerfile  LICENSE  MBAL_PRODUCTION_LAKEHOUSE_CONTRACTS.md  MBARI_PRODUCTION_LAKEHOUSE_CONTRACTS.md  MODEL_SUITE.md  NOTICE  PRODUCTION_READINESS.md  README.md  SECURITY.md  mbal_core.py  mbal_deep_models.py  mbal_drivers_build.py  mbal_forecast_v2.py  mbal_gpu_analysis.py  mbal_neural_forecast.py  mbal_split_contracts.py  mbal_train.py  mbari_core.py  mbari_deep_models.py  mbari_drivers_build.py  mbari_forecast_v2.py  mbari_gpu_analysis.py  mbari_lakehouse.py  mbari_neural_forecast.py  mbari_split_contracts.py  mbari_train.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
bacteria_results/discharge/: discharge_gauge.parquet  station_gauge_map.parquet
bacteria_results/rainfall/: rainfall_grid.parquet  station_grid_map.parquet
bacteria_results/statewide/: metrics.json  statewide_beach_observations.parquet
docs/: AGENT_PAIR_PLAYBOOK.md  VALUE_GATE.md  docker.md  news_modality_postmortem.md  open_source_readiness.md
docs/agent_brain/: README.md  agent_roles.json  decision_log.jsonl  invariants.json  learnings.jsonl  operating_loop.md  project_state.json  rejected_ideas.jsonl  science_mission.md
mbal_experiments/: README.md  __init__.py  cli.py
mbal_experiments/examples/: smoke_record_run.py
mbal_experiments/mbal_experiments/: __init__.py  cli.py  tracker.py
mbal_pipeline/: README.md  run_validation.py
mbal_pipeline/mbal_pipeline/: __init__.py  cli.py
ops/: ENVIRONMENT_RUNBOOK.md  README.md  WSL2_GPU_GUIDE.md  agent_brain_core.py  agent_brain_query.py  agent_lock.py  agent_preflight.py  agent_reflect.py  audit_news_event_drift.py  autonomous_rate_limit_fetcher.py  backfill_seasonal_naive.py  bloat_gate.py  build_champion_selector.py  build_fog_features.py  build_lakehouse.py  build_news_event_features.py  check_gpu.py  command_center.py  confirm_model_suite.py  curate_news_event_evidence.py  curate_news_events.py  current_data_pipeline.py  data_fetch.py  data_health_agent.py  diagnose_xgboost_outliers.py  evidence_gate_agent.py  evidence_ledger.py  export_gold_versioned.py  fetch_cache_guard.py  fetch_chlorophyll.py  fetch_news_events.py  fetch_seed_news_documents.py  foundation_rerun_agent.py  freeze-mbal-local.txt  gcp_portable_smoke_runbook.md  gcs_mirror.py  generate_cdip_station_map.py  generate_daily_learnings.py  gpu_admission.py  gpu_idle_runner.py  (+42 more)
ops/data_fetch/: __init__.py  cli.py  core.py  coverage_audit.py  registry.py  registry_laneA.py  registry_laneB.py  run_buildout.py  target_catalog.py
ops/stack_viz/: README.md  server.py
release/publish/: gitignore.public
release_gate/: README.md  champion_reproducibility_gate.py  driver_cell_demotion_gate.py  mbal_promotion_matrix.py  mbal_release_gate.py  mbal_sr_manager_gate.py  mbari_promotion_matrix.py  mbari_release_gate.py  mbari_sr_manager_gate.py
reports/: station_geo.parquet
reports/hab/: charm_comparison.json  charm_comparison.md  da_forecast.json  da_forecast.md
research/algae/: predict_bloom_experiment.py
research/bacteria/: CDIP_IMPLEMENTATION_SUMMARY.md  CDIP_INTEGRATION_STATUS.md  CDIP_WAVE_FETCH_GUIDE.md  DATA_FLOWS.md  FETCHER_EXTENSION_GUIDE.md  FETCHING_DATA.md  SIGNAL_DISCOVERY.md  build_sso_features.py  charm_experiment.py  early_warning.py  fetch_cdip_waves.py  fetch_discharge.py  fetch_rainfall.py  fetch_statewide_beachwatch.py  fetch_station_geo.py  fetch_tide_stages.py  habmap_experiment.py  lovers_point_bacteria_predict.py  new_source_signal_gate.py  omni_monterey_experiment.py  online_recalibration.py  operational_benchmark.py  physical_spatial_covariates.py  predict_current.py  residual_diagnostics.py  run_signal_discovery.py  shap_analysis.py  signal_lab.py  spatial_autocorr.py  spatial_drivers_experiment.py  spatial_holdout.py  statewide_bacteria_predict.py  tide_station_mapper.py
research/data_lab/: correlation_discovery.py  source_consistency_check.py  whale_mortality_analysis.py
research/hab/: charm_comparison.py  da_forecast.py  da_new_source_signals.py  da_upwelling_gate.py  hab_sota_sweep.py
research/lovers_point/: README.md
research/model_lab/: HONEST_SKILL_BASELINE.md  NEURAL_TRACK_VALUE_GATE.md  README.md  analyze_moe_routing.py  build_selector.py  deep_pattern_miner.py  generate_golden_era_splits.py  honest_baseline.py  (+13 more)
signals/: README.md  SIGNALS.md  catalog.py  catalog.yaml
sota_continual_learning/: README.md  RESULTS.md  __init__.py  config.json  core.py  data.py  diagnose_bf16.py  evaluate.py  evaluate_ewc_forgetting.py  example_continuous_learner.py  latent_models.py  main.py  monitor.py  monte_carlo_production.py  queue_and_train.ps1  requirements.txt  run_production.py  smoke_test_production.py  startup.py  tft.py  trainer.py
tests/: _fake_fetch_adapters.py  smoke_test_training.py  test_agent_brain.py  test_agent_lock.py  test_audit_news_event_drift.py  test_autonomous_rate_limit_fetcher.py  test_bacteria_bq_client.py  test_big_analysis.py  test_build_news_event_features.py  test_champion_reproducibility_gate.py  test_champion_selector.py  test_command_center.py  test_confirm_model_suite.py  test_correlation_discovery.py  test_curate_news_event_evidence.py  test_current_data_pipeline.py  test_da_forecast.py  test_da_new_source_signals.py  test_dashboard_decision.py  test_data_fetch.py  test_data_health_agent.py  test_deep_pattern_miner.py  test_driver_cell_demotion_gate.py  test_early_warning.py  test_evidence_gate_agent.py  test_export_gold_versioned.py  test_fetch_cache_guard.py  test_fetch_chlorophyll.py  test_fetch_news_events.py  test_forecast_matrix.py  test_foundation_rerun_agent.py  test_gcs_mirror.py  test_generate_daily_learnings.py  test_guided_interaction_search.py  test_import_boundaries.py  test_lakehouse_external_contracts.py  test_lakehouse_metrics.py  test_laneB_fetch_adapters.py  test_leaderboard_best_naive.py  test_mbal_drivers_build.py  (+45 more)
(+70 files in other folders)
