[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monterey-bay-ai-lab"
version = "0.1.0"
description = "Local Monterey Bay AI Lab coastal forecasting, model validation, and release-gate tooling."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Monterey Bay AI Lab" }]
dependencies = [
  "duckdb",
  "numpy",
  "pandas",
  "PyYAML",
  "pyarrow",
  "scikit-learn",
  "torch",
  "xgboost",
]

[project.optional-dependencies]
test = [
  "pytest",
]
# Phase-0 gated dependency for the gold -> Delta Lake cutover (open delta-rs
# writer; no JVM/Spark/Databricks product). Tooling degrades gracefully without it.
# See docs/delta_cutover_plan.md.
delta = [
  "deltalake>=1.0",
]
analysis = [
  "scipy",
  "pandas-gbq",
  "statsmodels",
]
foundation = [
  "chronos-forecasting",
]
geo = [
  "aiohttp",
  "beautifulsoup4",
  "dask[complete]",
  "db-dtypes",
  "fsspec",
  "google-cloud-bigquery",
  "google-cloud-bigquery-storage",
  "h5netcdf",
  "netCDF4",
  "openpyxl",
  "pandera",
  "requests",
  "xarray",
  "zarr",
]
neural = [
  "neuralforecast",
  "pytorch-lightning",
  "tensorboard",
  "tensorboardX",
]
# Aggregate extras are composed from the tiered groups above (self-referencing
# optional-dependencies, setuptools>=69) so the package lists never drift out of sync.
all = [
  "monterey-bay-ai-lab[analysis,foundation,geo,neural]",
]
dev = [
  "monterey-bay-ai-lab[all,test]",
]

[tool.setuptools]
py-modules = [
  "mbal_core",
  "mbal_deep_models",
  "mbal_drivers_build",
  "mbal_forecast_v2",
  "mbal_gpu_analysis",
  "mbal_neural_forecast",
  "mbal_split_contracts",
  "mbal_train",
]

[tool.setuptools.packages.find]
where = ["mbal_pipeline", "mbal_experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "mbal_history",
  "lakehouse",
  "nn_results",
  "nn_cache",
  "lightning_logs",
  "bacteria_results",
]
